@@ -13,7 +13,7 @@
 # OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
 # PERFORMANCE OF THIS SOFTWARE.
 
-# $Id: rules.in,v 1.40.2.5.4.8 2005/10/28 01:53:44 marka Exp $
+# $Id: rules.in,v 1.40.2.5.4.9 2006/01/05 00:38:39 marka Exp $
 
 ###
 ### Common Makefile rules for BIND 9.
@@ -100,6 +100,12 @@ LDFLAGS =	@LDFLAGS@
 STD_CINCLUDES =	@STD_CINCLUDES@
 STD_CDEFINES =	@STD_CDEFINES@
 STD_CWARNINGS =	@STD_CWARNINGS@
+
+BUILD_CC = @BUILD_CC@
+BUILD_CFLAGS = @BUILD_CFLAGS@
+BUILD_CPPFLAGS = @BUILD_CPPFLAGS@
+BUILD_LDFAGS = @BUILD_LDFAGS@
+BUILD_LIBS = @BUILD_LIBS@
 
 .SUFFIXES:
 .SUFFIXES: .c .@O@
